Edit total costs display

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -16,6 +16,9 @@ $primary-color: #25417c;
 $primary-border-color: #86aad6;
 $primary-background-color: #f3f6fe;
 $secondary-color: #477FA2;
+$success-color: #198754;
+$success-border-color: #a3cfbb;
+$success-background-color: #f1f9f4;
 $third-color: #B0DEDF;
 $warning-color: #f5adad;
 $danger-color: #cd0a0a;
