--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -316,6 +316,12 @@
     <%= render partial: 'shared/check_box', locals: { form: f, field: :optimization_force_start, label: t('activerecord.attributes.customer.optimization_force_start'), help: t('.optimization_force_start_help') } %>
   <% end %>
 
+  <%= render partial: 'shared/check_box', locals: { form: f, field: :enable_optimization_soft_upper_bound, label: t('activerecord.attributes.customer.enable_optimization_soft_upper_bound'), help: t('.enable_optimization_soft_upper_bound_help') } %>
+  <div class="<%= @customer.enable_optimization_soft_upper_bound ? "" : "d-none" %>" id="optimization_soft_upper_bound">
+    <%= f.number_field :stop_max_upper_bound, { help: t(".stop_max_upper_bound"), min: 0, step: 1 } %>
+    <%= f.number_field :vehicle_max_upper_bound, { help: t(".vehicle_max_upper_bound"), min: 0, step: 1 } %>
+  </div>
+
   <legend class="scheduler-border col-md-8">
     <%= t '.outputs' %>
   </legend>
