--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -231,7 +231,7 @@
                 - if @reseller.help_url
                   %li#menu-help.help.menu-section.menu-list-item
                     = link_to @reseller.help_url.gsub('{LG}', I18n.locale.to_s), target: '_blank' do
-                      .d-flex.align-items-center.justify-content-center
+                      .d-flex.align-items-center.justify-content-center.col-md-12.btn.btn-default
                         %i.fa.fa-hand-holding-hand.fa-fw
                         .hidden-menu.menu_label
                           = t 'web.help'
